--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=dev
 #spring.profiles.active=prod
 
+server.port=8088
+
 # MySQL数据库配置
 spring.datasource.url=jdbc:mysql://localhost:3306/fengyulou?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -9,3 +11,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=com.guoguo.fengyulou.entity
 mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
+
+#时间的格式
+spring.jackson.joda-date-time-format=yyyy-MM-dd HH:mm:ss
+#设置时区
+spring.jackson.time-zone=GMT+8
