--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,11 @@ mybatis.type-aliases-package=com.guoguo.fengyulou.entity
 mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 
+#日志配置
+logging.level.com.guoguo=debug
+logging.level.org.springframework=warn
+
 #时间的格式
-spring.jackson.joda-date-time-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.joda-date-time-format=yyyy-MM-dd HH:mm:ss
 #设置时区
-spring.jackson.time-zone=GMT+8
+#spring.jackson.time-zone=GMT+8
