--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ mybatis.type-aliases-package=com.guoguo.fengyulou.entity
 mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 
+#redis配置
+spring.redis.password=43b6f9b82c71c13063a523c0dcbc6db8fc0ac8a0
+
 #日志配置
 logging.level.com.guoguo=debug
 logging.level.org.springframework=warn
