--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>1.20</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.shalousun</groupId>
+            <artifactId>common-util</artifactId>
+            <version>1.9.5</version>
+        </dependency>
     </dependencies>
 
     <build>
