--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 server.port=8088
 
 # MySQL数据库配置
-spring.datasource.url=jdbc:mysql://localhost:3306/fengyulou?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/fengyulou_3.0?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # mybatis配置
