--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,10 @@
-# MySQL数据库账号密码
+# MySQL数据库配置
+spring.datasource.url=jdbc:mysql://localhost:3306/fengyulou?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=666666
+
+#redis配置
+spring.redis.password=43b6f9b82c71c13063a523c0dcbc6db8fc0ac8a0
 
 # 日志配置
 logging.level.com.guoguo=DEBUG
