--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,10 @@
-# MySQL数据库账号密码
-spring.datasource.username=fengyulou
-spring.datasource.password=fengyulou@123
+# MySQL数据库配置
+spring.datasource.url=jdbc:mysql://localhost:3306/fengyulou?useSSL=false
+spring.datasource.username=ningxing
+spring.datasource.password=ningxing!
+
+#redis配置
+spring.redis.password=
 
 # 日志配置
 #logging.level.com.guoguo=INFO
