--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>common-util</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
