--- a/src/main/resources/fengyulou.properties
+++ b/src/main/resources/fengyulou.properties
@@ -1,2 +1,7 @@
 # 密码盐
 fengyulou.password.salt=fengyulou
+#生成代码配置
+fengyulou.generate.code.package.path=com.guoguo.fengyulou
+fengyulou.generate.code.path=F:\\PublicProject\\fengyulou\\src\\main\\java\\com\\guoguo\\fengyulou
+fengyulou.generate.code.table.prefix=fengyulou_
+fengyulou.generate.code.templates.path=F:\\PublicProject\\fengyulou\\src\\main\\java\\com\\guoguo\\generate\\code\\template
